# path-planning-dev

./: README.md  package.xml  setup.py
config/real/: config.yaml
launch/: build_trajectory.launch.xml  follow_trajectory.launch.xml  load_trajectory.launch.xml  plan_trajectory.launch.xml
launch/debug/: load_trajectory.launch.xml
launch/sim/: sim_plan.launch.xml  sim_plan_follow.launch.xml
path_planning/: path_planning.py  pure_pursuit.py  trajectory_builder.py  trajectory_loader.py  trajectory_planner.py  utils.py
