<?xml version="1.0"?>
<package format="3">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path planning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kathleen@todo.todo">kathleen</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
